part-1/two-containers/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: two-container-svc
spec:
  type: ClusterIP
  selector:
    app: two-container
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
